# HydroHomie

./: .gitignore  LICENSE.md  Pipfile  README.md  bot.py  hydro.txt  main.py  pyproject.toml  run.sh
posts/daily-altruism/: apps.txt  base.txt  rak.txt
