[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Soucy", email = "git@msoucy.me"},
]
dependencies = ["mastodon.py"]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
